--- a/new-style.css
+++ b/new-style.css
@@ -77,6 +77,7 @@
     transition: all .5s ease;
     transform: translateY(-5px);
     box-shadow: 5px 10px 18px rgba(100, 98, 98, 0.5);
+    cursor: pointer;
 }
 .col .card.active{
     background-color: #9c9fa3;
@@ -135,6 +136,7 @@
         position: sticky;
         top: 0;
         background: #EFF2F6;
+       
         
         
         
@@ -143,6 +145,9 @@
     }
     td{
         
+    }
+    .table-pointer{
+        cursor: pointer;
     }
    table{
     table-layout: fixed;
