--- a/new-style.css
+++ b/new-style.css
@@ -132,6 +132,9 @@
         position:fixed;
         overflow:hidden;
     }
+    #tip{
+        font-size: .7rem;
+    }
     th{
         position: sticky;
         top: 0;
