--- a/new-style.css
+++ b/new-style.css
@@ -1,4 +1,7 @@
-
+body{
+    background-color: #F0F2F6;
+    display: flex;
+}
 .main {
     height: 100vh;
 }
@@ -10,6 +13,9 @@
 
 .map-container {
     height: 500px;
+    /* margin-right: 10px;
+    margin-left: 10px; */
+    border-radius: 10px;
 }
 
 #map {
@@ -18,7 +24,7 @@
 }
 
 .chart-container {
-    height: 300px;
+    height:auto;
     margin-left: 0;
     margin-right: 0;
 }
@@ -43,18 +49,26 @@
 }
 
 .stats-container .card {    
-    background-color: #EFF2F6;
+    /* background-color: #EFF2F6; */
     border-radius: 12px;
+}
+.stats-container{
+    justify-content: space-around;
 }
 
 .stats-container .card-body {
     padding: 1rem;
 }
+.card{
+    overflow: hidden;
+    background-color: white;
+}
 
 .side-panel-container {
     background-color: #EFF2F6;
-    border-bottom-left-radius: 30px;
-    border-top-left-radius: 30px;
+    /* border-bottom-left-radius: 30px;
+    border-top-left-radius: 30px; */
+    border-radius: 30px;
 }
 
 .total-number {
@@ -72,20 +86,40 @@
 .deaths-number {
     color: #fb4443;
 }
-.col .card:hover{
-    background-color: #9c9fa3;
+ .card:hover{
+    /* background-color: #9c9fa3; */
     transition: all .5s ease;
     transform: translateY(-5px);
     box-shadow: 5px 10px 18px rgba(100, 98, 98, 0.5);
     cursor: pointer;
 }
 .col .card.active{
-    background-color: #9c9fa3;
+    /* background-color: #9c9fa3; */
 }
 .col .card.active:first-child{
-    color: white;
+    /* color: white; */
 }
-.col .card.active .card-subtitle{
+
+.active .highlight{
+    background-color: #666666;
+    height: 8%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+   
+}
+.card.recovered:hover{
+    border: 2px solid#B5E7AAed;
+}
+.card.deaths:hover{
+    border: 2px solid#F6595A
+}
+.card.cases:hover{
+    border: 2px solid#666666
+}
+
+.card.active .card-subtitle{
     text-decoration: underline;
     font-weight: bold;
 }
@@ -99,18 +133,21 @@
     
 } 
 
+
     img{
         margin-right: 1px;
     }
 
     .table-container  {
         width: 100%;
-        height: 1000px;
+        height: 900px;
           overflow: hidden;
         overflow-y: auto;
         overflow-x: auto;
         scroll-behavior: smooth;
         margin-right: 100px;
+        margin-bottom: 20px;
+        border-radius: 20px;
 
     }
     
@@ -122,6 +159,9 @@
     img {
         max-width: 100%;
         max-height: 100%;
+    }
+    img.flag-table{
+        border: 1px solid #A8AEBA;
     }
     
     .tooltip span {
@@ -138,7 +178,9 @@
     th{
         position: sticky;
         top: 0;
-        background: #EFF2F6;
+        left: 0;
+        background: white;
+        
        
         
         
@@ -146,20 +188,186 @@
         /* overflow: hidden;
         border-top: 2px solid #EFF2F6; ; */
     }
-    td{
+    /* .table thead th{
+        border-bottom: none;
         
-    }
+    } */
     .table-pointer{
         cursor: pointer;
     }
    table{
     table-layout: fixed;
     width: 100%;
+    background-color: white;
+   
     
     /* word-break: break-word; */
    
    }
-   .side-panel-container{
-       border-top: 2px solid white;
+   tr{
+       cursor: pointer;
    }
+   .side-panel-container{
+    background-color: #EFF2F6;
+   }
+   .map-container{
+       background-color: white;
+       padding: 15px;
+   }
+   .map-container .col{
+       padding: 0;
+   }
+   .news-container{
+       background-color: white;
+       padding: 10px;
+       border-radius: 10px;
+       height: auto;
+       overflow: hidden;
+       overflow: scroll;
+       text-align: center;
+       margin-bottom: 10px;
+       color: #656565;
+   }
+   .pie-container{
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 20px;
+   }
+.todays-cases{
+    color: #666666;
+}
+.todays-recoverd{
+    color: #7dd71d;
+}
+.todays-deaths{
+    color: #fc3c3c;
+}
   
+.bar-line-container{
+    background-color: white;
+    border-radius: 10px;
+}
+/* .input-group2{
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 0;
+    display: none;
+} */
+#news-feed,#news-feed2, #news-feed3{
+    display: none;
+
+    
+}
+.open-close{
+    font-size: 2rem;
+    cursor: pointer;
+    
+    -webkit-transition: -webkit-transform .5s ease-in-out;
+          transition:         transform .5s ease-in-out;
+}
+.open-close:hover{
+    -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.video-container{
+   
+    background-color: white;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-left: 15px;
+    margin-right: 15px;
+    
+}
+.video{
+    padding: 10px 10px 20px 10px;
+}
+.header-short{
+    display: none;
+}
+.refrest-container{
+    padding-bottom: 10px;
+    float: right;
+    font-weight: bold;
+    
+}
+.refresh-btn{
+    cursor: pointer;
+    -webkit-transition: -webkit-transform .5s ease-in-out;
+          transition:         transform .5s ease-in-out;
+}
+.refresh-btn:hover{
+    -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.dropdown{
+    padding-left: 0;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .search-container{
+      position: relative;
+  }
+  .dropdown-content {
+    display: none;
+    max-height: 300px;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+  }
+  .car-container{
+      margin-top: 10px;
+      box-sizing: border-box;
+      padding: 15px;
+      border-radius: 10px;
+      background-color: white;
+  }
+  .modal{
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(80, 77, 76, 0.849);
+  }
+ .modal-content{
+    width: 80%;
+    display: block;
+    padding: 10px;
+ }
+
+  .closeBtn{
+      float: right;
+      cursor: pointer;
+  }
+  .modal p{
+    margin: 20px 0 0 0;
+  }
+ 
+ 
+/* @media only screen and (max-width: 800px) {
+     */
+  
+@media only screen and (max-width: 815px) {
+    
+   /* .input-group{
+       display: none;
+   }
+   .input-group2{
+    display: flex;
+    } */
+    .hide{
+        display: none;
+    }
+    .header-long{
+        display: none;
+    }
+    .header-short{
+        display: inline-block;
+    }
+    
+}
