--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
+    /* background-image: url(./images/images.jpeg );
+    background-size: cover; */
 }
+
 
 #nav {
     height: 50px;
@@ -8,7 +11,7 @@ body {
 
 #map  {
     width: 100%;
-    height: 100%;
+    height:93%;
 }
 
 .chart-data {
@@ -47,7 +50,8 @@ body {
 }
 
 .info-container {
-    width: 150px;
+    /* width: 150px; */
+    width: auto;
 }
 
 .info-flag {
@@ -55,6 +59,7 @@ body {
     width: 100%;
     background-size: cover;
     border-radius: 8px;
+    border: 1px solid #A8AEBA;
 }
 
 .info-confirmed, .info-recovered, .info-deaths {
